Fixed some bugs regarding fade-to-black on mobile menu expansion

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body
 {
 	font-family: Courier;
 	margin-bottom: 80px;
+	width:100%;
 }
 html
 {
